website/versioned_docs/version-22.0.0/api/index.md
---
sidebar_label: API
---

# API Reference

## Classes

| Class                                                                 | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| --------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [Accessibility](./puppeteer.accessibility.md)                         | The Accessibility class provides methods for inspecting the browser's accessibility tree. The accessibility tree is used by assistive technology such as [screen readers](https://en.wikipedia.org/wiki/Screen_reader) or [switches](https://en.wikipedia.org/wiki/Switch_access).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [Browser](./puppeteer.browser.md)                                     | <p>[Browser](./puppeteer.browser.md) represents a browser instance that is either:</p><p>- connected to via [Puppeteer.connect()](./puppeteer.puppeteer.connect.md) or - launched by [PuppeteerNode.launch()](./puppeteer.puppeteernode.launch.md).</p><p>[Browser](./puppeteer.browser.md) [emits](./puppeteer.eventemitter.md) various events which are documented in the [BrowserEvent](./puppeteer.browserevent.md) enum.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [BrowserContext](./puppeteer.browsercontext.md)                       | <p>[BrowserContext](./puppeteer.browsercontext.md) represents individual user contexts within a [browser](./puppeteer.browser.md).</p><p>When a [browser](./puppeteer.browser.md) is launched, it has a single [browser context](./puppeteer.browsercontext.md) by default. Others can be created using [Browser.createBrowserContext()](./puppeteer.browser.createbrowsercontext.md). Each context has isolated storage (cookies/localStorage/etc.)</p><p>[BrowserContext](./puppeteer.browsercontext.md) [emits](./puppeteer.eventemitter.md) various events which are documented in the [BrowserContextEvent](./puppeteer.browsercontextevent.md) enum.</p><p>If a [page](./puppeteer.page.md) opens another [page](./puppeteer.page.md), e.g. using <code>window.open</code>, the popup will belong to the parent [page's browser context](./puppeteer.page.browsercontext.md).</p> |
| [CDPSession](./puppeteer.cdpsession.md)                               | The <code>CDPSession</code> instances are used to talk raw Chrome Devtools Protocol.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [Connection](./puppeteer.connection.md)                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [ConsoleMessage](./puppeteer.consolemessage.md)                       | ConsoleMessage objects are dispatched by page via the 'console' event.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [Coverage](./puppeteer.coverage.md)                                   | The Coverage class provides methods to gather information about parts of JavaScript and CSS that were used by the page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [CSSCoverage](./puppeteer.csscoverage.md)                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [DeviceRequestPrompt](./puppeteer.devicerequestprompt.md)             | Device request prompts let you respond to the page requesting for a device through an API like WebBluetooth.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [DeviceRequestPromptDevice](./puppeteer.devicerequestpromptdevice.md) | Device in a request prompt.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [Dialog](./puppeteer.dialog.md)                                       | Dialog instances are dispatched by the [Page](./puppeteer.page.md) via the <code>dialog</code> event.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [ElementHandle](./puppeteer.elementhandle.md)                         | ElementHandle represents an in-page DOM element.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [EventEmitter](./puppeteer.eventemitter.md)                           | The EventEmitter class that many Puppeteer classes extend.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [FileChooser](./puppeteer.filechooser.md)                             | File choosers let you react to the page requesting for a file.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [Frame](./puppeteer.frame.md)                                         | <p>Represents a DOM frame.</p><p>To understand frames, you can think of frames as <code>&lt;iframe&gt;</code> elements. Just like iframes, frames can be nested, and when JavaScript is executed in a frame, the JavaScript does not effect frames inside the ambient frame the JavaScript executes in.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [HTTPRequest](./puppeteer.httprequest.md)                             | Represents an HTTP request sent by a page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [HTTPResponse](./puppeteer.httpresponse.md)                           | The HTTPResponse class represents responses which are received by the [Page](./puppeteer.page.md) class.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [JSCoverage](./puppeteer.jscoverage.md)                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [JSHandle](./puppeteer.jshandle.md)                                   | <p>Represents a reference to a JavaScript object. Instances can be created using [Page.evaluateHandle()](./puppeteer.page.evaluatehandle.md).</p><p>Handles prevent the referenced JavaScript object from being garbage-collected unless the handle is purposely [disposed](./puppeteer.jshandle.dispose.md). JSHandles are auto-disposed when their associated frame is navigated away or the parent context gets destroyed.</p><p>Handles can be used as arguments for any evaluation function such as [Page.$eval()](./puppeteer.page._eval.md), [Page.evaluate()](./puppeteer.page.evaluate.md), and [Page.evaluateHandle()](./puppeteer.page.evaluatehandle.md). They are resolved to their referenced object.</p>                                                                                                                                                                 |
| [Keyboard](./puppeteer.keyboard.md)                                   | Keyboard provides an api for managing a virtual keyboard. The high level api is [Keyboard.type()](./puppeteer.keyboard.type.md), which takes raw characters and generates proper keydown, keypress/input, and keyup events on your page.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [Locator](./puppeteer.locator.md)                                     | Locators describe a strategy of locating objects and performing an action on them. If the action fails because the object is not ready for the action, the whole operation is retried. Various preconditions for a successful action are checked automatically.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [Mouse](./puppeteer.mouse.md)                                         | The Mouse class operates in main-frame CSS pixels relative to the top-left corner of the viewport.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [Page](./puppeteer.page.md)                                           | <p>Page provides methods to interact with a single tab or [extension background page](https://developer.chrome.com/extensions/background_pages) in the browser.</p><p>:::note</p><p>One Browser instance might have multiple Page instances.</p><p>:::</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [ProductLauncher](./puppeteer.productlauncher.md)                     | Describes a launcher - a class that is able to create and launch a browser instance.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [ProtocolError](./puppeteer.protocolerror.md)                         | ProtocolError is emitted whenever there is an error from the protocol.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [Puppeteer](./puppeteer.puppeteer.md)                                 | <p>The main Puppeteer class.</p><p>IMPORTANT: if you are using Puppeteer in a Node environment, you will get an instance of [PuppeteerNode](./puppeteer.puppeteernode.md) when you import or require <code>puppeteer</code>. That class extends <code>Puppeteer</code>, so has all the methods documented below as well as all that are defined on [PuppeteerNode](./puppeteer.puppeteernode.md).</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [PuppeteerError](./puppeteer.puppeteererror.md)                       | The base class for all Puppeteer-specific errors                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [PuppeteerNode](./puppeteer.puppeteernode.md)                         | <p>Extends the main [Puppeteer](./puppeteer.puppeteer.md) class with Node specific behaviour for fetching and downloading browsers.</p><p>If you're using Puppeteer in a Node environment, this is the class you'll get when you run <code>require('puppeteer')</code> (or the equivalent ES <code>import</code>).</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [ScreenRecorder](./puppeteer.screenrecorder.md)                       |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [SecurityDetails](./puppeteer.securitydetails.md)                     | The SecurityDetails class represents the security details of a response that was received over a secure connection.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [Target](./puppeteer.target.md)                                       | Target represents a [CDP target](https://chromedevtools.github.io/devtools-protocol/tot/Target/). In CDP a target is something that can be debugged such a frame, a page or a worker.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [TimeoutError](./puppeteer.timeouterror.md)                           | TimeoutError is emitted whenever certain operations are terminated due to timeout.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [Touchscreen](./puppeteer.touchscreen.md)                             | The Touchscreen class exposes touchscreen events.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [Tracing](./puppeteer.tracing.md)                                     | The Tracing class exposes the tracing audit interface.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [UnsupportedOperation](./puppeteer.unsupportedoperation.md)           | Puppeteer will throw this error if a method is not supported by the currently used protocol                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [WebWorker](./puppeteer.webworker.md)                                 | This class represents a [WebWorker](https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |

## Enumerations

| Enumeration                                                           | Description                                                           |
| --------------------------------------------------------------------- | --------------------------------------------------------------------- |
| [BrowserContextEvent](./puppeteer.browsercontextevent.md)             |                                                                       |
| [BrowserEvent](./puppeteer.browserevent.md)                           | All the events a [browser instance](./puppeteer.browser.md) may emit. |
| [InterceptResolutionAction](./puppeteer.interceptresolutionaction.md) |                                                                       |
| [LocatorEvent](./puppeteer.locatorevent.md)                           | All the events that a locator instance may emit.                      |
| [PageEvent](./puppeteer.pageevent.md)                                 | All the events that a page instance may emit.                         |
| [TargetType](./puppeteer.targettype.md)                               |                                                                       |

## Functions

| Function                                                                               | Description |
| -------------------------------------------------------------------------------------- | ----------- |
| [clearCustomQueryHandlers()](./puppeteer.clearcustomqueryhandlers.md)                  |             |
| [customQueryHandlerNames()](./puppeteer.customqueryhandlernames.md)                    |             |
| [registerCustomQueryHandler(name, handler)](./puppeteer.registercustomqueryhandler.md) |             |
| [unregisterCustomQueryHandler(name)](./puppeteer.unregistercustomqueryhandler.md)      |             |

## Interfaces

| Interface                                                                   | Description                                                                                                                                                                         |
| --------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [ActionOptions](./puppeteer.actionoptions.md)                               |                                                                                                                                                                                     |
| [AutofillData](./puppeteer.autofilldata.md)                                 |                                                                                                                                                                                     |
| [BoundingBox](./puppeteer.boundingbox.md)                                   |                                                                                                                                                                                     |
| [BoxModel](./puppeteer.boxmodel.md)                                         |                                                                                                                                                                                     |
| [BrowserConnectOptions](./puppeteer.browserconnectoptions.md)               | Generic browser options that can be passed when launching any browser or when connecting to an existing browser instance.                                                           |
| [BrowserContextEvents](./puppeteer.browsercontextevents.md)                 |                                                                                                                                                                                     |
| [BrowserContextOptions](./puppeteer.browsercontextoptions.md)               |                                                                                                                                                                                     |
| [BrowserEvents](./puppeteer.browserevents.md)                               |                                                                                                                                                                                     |
| [BrowserLaunchArgumentOptions](./puppeteer.browserlaunchargumentoptions.md) | Launcher options that only apply to Chrome.                                                                                                                                         |
| [CDPSessionEvents](./puppeteer.cdpsessionevents.md)                         |                                                                                                                                                                                     |
| [ClickOptions](./puppeteer.clickoptions.md)                                 |                                                                                                                                                                                     |
| [CommandOptions](./puppeteer.commandoptions.md)                             |                                                                                                                                                                                     |
| [CommonEventEmitter](./puppeteer.commoneventemitter.md)                     |                                                                                                                                                                                     |
| [Configuration](./puppeteer.configuration.md)                               | <p>Defines options to configure Puppeteer's behavior during installation and runtime.</p><p>See individual properties for more information.</p>                                     |
| [ConnectionTransport](./puppeteer.connectiontransport.md)                   |                                                                                                                                                                                     |
| [ConnectOptions](./puppeteer.connectoptions.md)                             |                                                                                                                                                                                     |
| [ConsoleMessageLocation](./puppeteer.consolemessagelocation.md)             |                                                                                                                                                                                     |
| [ContinueRequestOverrides](./puppeteer.continuerequestoverrides.md)         |                                                                                                                                                                                     |
| [Cookie](./puppeteer.cookie.md)                                             | Represents a cookie object.                                                                                                                                                         |
| [CookieParam](./puppeteer.cookieparam.md)                                   | Cookie parameter object                                                                                                                                                             |
| [CoverageEntry](./puppeteer.coverageentry.md)                               | The CoverageEntry class represents one entry of the coverage report.                                                                                                                |
| [Credentials](./puppeteer.credentials.md)                                   |                                                                                                                                                                                     |
| [CSSCoverageOptions](./puppeteer.csscoverageoptions.md)                     | Set of configurable options for CSS coverage.                                                                                                                                       |
| [CustomQueryHandler](./puppeteer.customqueryhandler.md)                     |                                                                                                                                                                                     |
| [DebugInfo](./puppeteer.debuginfo.md)                                       |                                                                                                                                                                                     |
| [DeleteCookiesRequest](./puppeteer.deletecookiesrequest.md)                 |                                                                                                                                                                                     |
| [Device](./puppeteer.device.md)                                             |                                                                                                                                                                                     |
| [ElementScreenshotOptions](./puppeteer.elementscreenshotoptions.md)         |                                                                                                                                                                                     |
| [FrameAddScriptTagOptions](./puppeteer.frameaddscripttagoptions.md)         |                                                                                                                                                                                     |
| [FrameAddStyleTagOptions](./puppeteer.frameaddstyletagoptions.md)           |                                                                                                                                                                                     |
| [FrameEvents](./puppeteer.frameevents.md)                                   |                                                                                                                                                                                     |
| [FrameWaitForFunctionOptions](./puppeteer.framewaitforfunctionoptions.md)   |                                                                                                                                                                                     |
| [GeolocationOptions](./puppeteer.geolocationoptions.md)                     |                                                                                                                                                                                     |
| [GoToOptions](./puppeteer.gotooptions.md)                                   |                                                                                                                                                                                     |
| [InterceptResolutionState](./puppeteer.interceptresolutionstate.md)         |                                                                                                                                                                                     |
| [InternalNetworkConditions](./puppeteer.internalnetworkconditions.md)       |                                                                                                                                                                                     |
| [JSCoverageEntry](./puppeteer.jscoverageentry.md)                           | The CoverageEntry class for JavaScript                                                                                                                                              |
| [JSCoverageOptions](./puppeteer.jscoverageoptions.md)                       | Set of configurable options for JS coverage.                                                                                                                                        |
| [KeyboardTypeOptions](./puppeteer.keyboardtypeoptions.md)                   |                                                                                                                                                                                     |
| [KeyDownOptions](./puppeteer.keydownoptions.md)                             |                                                                                                                                                                                     |
| [LaunchOptions](./puppeteer.launchoptions.md)                               | Generic launch options that can be passed when launching any browser.                                                                                                               |
| [LocatorEvents](./puppeteer.locatorevents.md)                               |                                                                                                                                                                                     |
| [LocatorOptions](./puppeteer.locatoroptions.md)                             |                                                                                                                                                                                     |
| [LocatorScrollOptions](./puppeteer.locatorscrolloptions.md)                 |                                                                                                                                                                                     |
| [MediaFeature](./puppeteer.mediafeature.md)                                 |                                                                                                                                                                                     |
| [Metrics](./puppeteer.metrics.md)                                           |                                                                                                                                                                                     |
| [MouseClickOptions](./puppeteer.mouseclickoptions.md)                       |                                                                                                                                                                                     |
| [MouseMoveOptions](./puppeteer.mousemoveoptions.md)                         |                                                                                                                                                                                     |
| [MouseOptions](./puppeteer.mouseoptions.md)                                 |                                                                                                                                                                                     |
| [MouseWheelOptions](./puppeteer.mousewheeloptions.md)                       |                                                                                                                                                                                     |
| [Moveable](./puppeteer.moveable.md)                                         |                                                                                                                                                                                     |
| [NetworkConditions](./puppeteer.networkconditions.md)                       |                                                                                                                                                                                     |
| [NewDocumentScriptEvaluation](./puppeteer.newdocumentscriptevaluation.md)   |                                                                                                                                                                                     |
| [Offset](./puppeteer.offset.md)                                             |                                                                                                                                                                                     |
| [PageEvents](./puppeteer.pageevents.md)                                     | <p>Denotes the objects received by callback functions for page events.</p><p>See [PageEvent](./puppeteer.pageevent.md) for more detail on the events and when they are emitted.</p> |
| [PDFMargin](./puppeteer.pdfmargin.md)                                       |                                                                                                                                                                                     |
| [PDFOptions](./puppeteer.pdfoptions.md)                                     | Valid options to configure PDF generation via [Page.pdf()](./puppeteer.page.pdf.md).                                                                                                |
| [Point](./puppeteer.point.md)                                               |                                                                                                                                                                                     |
| [PuppeteerLaunchOptions](./puppeteer.puppeteerlaunchoptions.md)             |                                                                                                                                                                                     |
| [RemoteAddress](./puppeteer.remoteaddress.md)                               |                                                                                                                                                                                     |
| [ResponseForRequest](./puppeteer.responseforrequest.md)                     | Required response data to fulfill a request with.                                                                                                                                   |
| [ScreencastOptions](./puppeteer.screencastoptions.md)                       |                                                                                                                                                                                     |
| [ScreenshotClip](./puppeteer.screenshotclip.md)                             |                                                                                                                                                                                     |
| [ScreenshotOptions](./puppeteer.screenshotoptions.md)                       |                                                                                                                                                                                     |
| [SerializedAXNode](./puppeteer.serializedaxnode.md)                         | Represents a Node and the properties of it that are relevant to Accessibility.                                                                                                      |
| [SnapshotOptions](./puppeteer.snapshotoptions.md)                           |                                                                                                                                                                                     |
| [TracingOptions](./puppeteer.tracingoptions.md)                             |                                                                                                                                                                                     |
| [Viewport](./puppeteer.viewport.md)                                         |                                                                                                                                                                                     |
| [WaitForNetworkIdleOptions](./puppeteer.waitfornetworkidleoptions.md)       |                                                                                                                                                                                     |
| [WaitForOptions](./puppeteer.waitforoptions.md)                             |                                                                                                                                                                                     |
| [WaitForSelectorOptions](./puppeteer.waitforselectoroptions.md)             |                                                                                                                                                                                     |
| [WaitForTargetOptions](./puppeteer.waitfortargetoptions.md)                 |                                                                                                                                                                                     |
| [WaitTimeoutOptions](./puppeteer.waittimeoutoptions.md)                     |                                                                                                                                                                                     |

## Namespaces

| Namespace                                         | Description                             |
| ------------------------------------------------- | --------------------------------------- |
| [CDPSessionEvent](./puppeteer.cdpsessionevent.md) | Events that the CDPSession class emits. |

## Variables

| Variable                                                                                      | Description                                                                                                                   |
| --------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------- |
| [connect](./puppeteer.connect.md)                                                             |                                                                                                                               |
| [DEFAULT_INTERCEPT_RESOLUTION_PRIORITY](./puppeteer.default_intercept_resolution_priority.md) | The default cooperative request interception resolution priority                                                              |
| [defaultArgs](./puppeteer.defaultargs.md)                                                     |                                                                                                                               |
| [executablePath](./puppeteer.executablepath.md)                                               |                                                                                                                               |
| [KnownDevices](./puppeteer.knowndevices.md)                                                   | A list of devices to be used with [Page.emulate()](./puppeteer.page.emulate.md).                                              |
| [launch](./puppeteer.launch.md)                                                               |                                                                                                                               |
| [MouseButton](./puppeteer.mousebutton.md)                                                     | Enum of valid mouse buttons.                                                                                                  |
| [PredefinedNetworkConditions](./puppeteer.predefinednetworkconditions.md)                     | A list of network conditions to be used with [Page.emulateNetworkConditions()](./puppeteer.page.emulatenetworkconditions.md). |
| [puppeteer](./puppeteer.puppeteer.md)                                                         |                                                                                                                               |
| [trimCache](./puppeteer.trimcache.md)                                                         |                                                                                                                               |

## Type Aliases

| Type Alias                                                              | Description                                                                                                                                                                                                                            |
| ----------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [ActionResult](./puppeteer.actionresult.md)                             |                                                                                                                                                                                                                                        |
| [Awaitable](./puppeteer.awaitable.md)                                   |                                                                                                                                                                                                                                        |
| [AwaitableIterable](./puppeteer.awaitableiterable.md)                   |                                                                                                                                                                                                                                        |
| [AwaitablePredicate](./puppeteer.awaitablepredicate.md)                 |                                                                                                                                                                                                                                        |
| [AwaitedLocator](./puppeteer.awaitedlocator.md)                         |                                                                                                                                                                                                                                        |
| [CDPEvents](./puppeteer.cdpevents.md)                                   |                                                                                                                                                                                                                                        |
| [ChromeReleaseChannel](./puppeteer.chromereleasechannel.md)             |                                                                                                                                                                                                                                        |
| [ConsoleMessageType](./puppeteer.consolemessagetype.md)                 | The supported types for console messages.                                                                                                                                                                                              |
| [CookiePriority](./puppeteer.cookiepriority.md)                         | Represents the cookie's 'Priority' status: https://tools.ietf.org/html/draft-west-cookie-priority-00                                                                                                                                   |
| [CookieSameSite](./puppeteer.cookiesamesite.md)                         | Represents the cookie's 'SameSite' status: https://tools.ietf.org/html/draft-west-first-party-cookies                                                                                                                                  |
| [CookieSourceScheme](./puppeteer.cookiesourcescheme.md)                 | Represents the source scheme of the origin that originally set the cookie. A value of "Unset" allows protocol clients to emulate legacy cookie scope for the scheme. This is a temporary ability and it will be removed in the future. |
| [ElementFor](./puppeteer.elementfor.md)                                 |                                                                                                                                                                                                                                        |
| [ErrorCode](./puppeteer.errorcode.md)                                   |                                                                                                                                                                                                                                        |
| [EvaluateFunc](./puppeteer.evaluatefunc.md)                             |                                                                                                                                                                                                                                        |
| [EvaluateFuncWith](./puppeteer.evaluatefuncwith.md)                     |                                                                                                                                                                                                                                        |
| [EventsWithWildcard](./puppeteer.eventswithwildcard.md)                 |                                                                                                                                                                                                                                        |
| [EventType](./puppeteer.eventtype.md)                                   |                                                                                                                                                                                                                                        |
| [ExperimentsConfiguration](./puppeteer.experimentsconfiguration.md)     | <p>Defines experiment options for Puppeteer.</p><p>See individual properties for more information.</p>                                                                                                                                 |
| [FlattenHandle](./puppeteer.flattenhandle.md)                           |                                                                                                                                                                                                                                        |
| [HandleFor](./puppeteer.handlefor.md)                                   |                                                                                                                                                                                                                                        |
| [HandleOr](./puppeteer.handleor.md)                                     |                                                                                                                                                                                                                                        |
| [Handler](./puppeteer.handler.md)                                       |                                                                                                                                                                                                                                        |
| [InnerParams](./puppeteer.innerparams.md)                               |                                                                                                                                                                                                                                        |
| [KeyInput](./puppeteer.keyinput.md)                                     | All the valid keys that can be passed to functions that take user input, such as [keyboard.press](./puppeteer.keyboard.press.md)                                                                                                       |
| [KeyPressOptions](./puppeteer.keypressoptions.md)                       |                                                                                                                                                                                                                                        |
| [LocatorClickOptions](./puppeteer.locatorclickoptions.md)               |                                                                                                                                                                                                                                        |
| [LowerCasePaperFormat](./puppeteer.lowercasepaperformat.md)             |                                                                                                                                                                                                                                        |
| [Mapper](./puppeteer.mapper.md)                                         |                                                                                                                                                                                                                                        |
| [MouseButton](./puppeteer.mousebutton.md)                               |                                                                                                                                                                                                                                        |
| [NodeFor](./puppeteer.nodefor.md)                                       |                                                                                                                                                                                                                                        |
| [PaperFormat](./puppeteer.paperformat.md)                               | All the valid paper format types when printing a PDF.                                                                                                                                                                                  |
| [Permission](./puppeteer.permission.md)                                 |                                                                                                                                                                                                                                        |
| [Predicate](./puppeteer.predicate.md)                                   |                                                                                                                                                                                                                                        |
| [Product](./puppeteer.product.md)                                       | Supported products.                                                                                                                                                                                                                    |
| [ProtocolLifeCycleEvent](./puppeteer.protocollifecycleevent.md)         |                                                                                                                                                                                                                                        |
| [ProtocolType](./puppeteer.protocoltype.md)                             |                                                                                                                                                                                                                                        |
| [PuppeteerLifeCycleEvent](./puppeteer.puppeteerlifecycleevent.md)       |                                                                                                                                                                                                                                        |
| [PuppeteerNodeLaunchOptions](./puppeteer.puppeteernodelaunchoptions.md) | Utility type exposed to enable users to define options that can be passed to <code>puppeteer.launch</code> without having to list the set of all types.                                                                                |
| [Quad](./puppeteer.quad.md)                                             |                                                                                                                                                                                                                                        |
| [ResourceType](./puppeteer.resourcetype.md)                             | Resource types for HTTPRequests as perceived by the rendering engine.                                                                                                                                                                  |
| [TargetFilterCallback](./puppeteer.targetfiltercallback.md)             |                                                                                                                                                                                                                                        |
| [VisibilityOption](./puppeteer.visibilityoption.md)                     |                                                                                                                                                                                                                                        |
